# Oct18

./: .gitignore  BUGFIX-POLLING.md  BUGFIX-SUMMARY.md  BUG_FIX_REPORT.md  CHANGELOG.md  CLEAR-GALLERY.md  CONTRIBUTING.md  DEVPOST_SUBMISSION.md  ENVIRONMENT.md  GEMINI_LIVE_MIGRATION.md  MODELS-GUIDE.md  PROJECT-STRUCTURE.md  PROJECT.md  QUICK-COMMANDS.md  QUICK_START.md  README-UNIFIED.md  README.md  REFACTORING-COMPLETE.md  REFACTORING_SUMMARY.md  SOLUTION-SUMMARY.md  WHATS-NEW.md  dev-server.js  launch.js  package-lock.json  package.json  run-dev.ps1  start-dev.cmd  start-dev.ps1  start.bat  tsconfig.json
app/: globals.css  layout.tsx  page-old.tsx  page-unified.tsx  page-with-voice.tsx  page.tsx
components/: ErrorBoundary.tsx
components/ui/: AgentPanel.tsx  Composer.tsx  EditVideoPage.tsx  MediaUploadPanel.tsx  ModelInfoCard.tsx  ModelSelector.tsx  ProductGallery.tsx  RealVoiceAgent.tsx  UnifiedComposer.tsx  VeoGallery.tsx  VideoPlayer.tsx  VoiceAgent.tsx  VoiceSidebar.tsx  VoiceSphere.tsx
components/voice/: VoiceCommands.tsx  VoicePanel.tsx
contexts/: GalleryContext.tsx  VideoGenerationContext.tsx
docs/: FEATURES-SHOWCASE.md  README.md  SETUP-GUIDE.md  UI-FIXES-COMPLETE.md
lib/: config.ts  constants.ts  geminiLive.ts  mockGalleryItems.ts  types.ts  videoGenerationService.ts
lib/fetchai/: agentCoordinator.ts  agents.ts
lib/hooks/: useGallery.ts  useImageGeneration.ts  useVideoGeneration.ts
lib/services/: imageService.ts  videoService.ts
server/: creative_bot.py  pyproject.toml
types/: index.ts
voice components/: page.tsx  voice-sphere.tsx
(+14 files in other folders)
